--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "movie app for showing trailers",
   "main": "public/index.js",
   "license": "MIT",
+  "engines": {
+    "node": "10.0.0"
+  },
   "scripts": {
     "build": "webpack-dev-server",
     "build:prod": "webpack -p --env production",
