--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,11 @@ node_modules/
 bundle.js
 .eslintrc.js
 .babelrc
-
+public/
+server/
+src/
+.gitignore
+package-lock.json
+package.json
+yarn.lock
+.vscode
